# MassiveFold

./: .gitignore  .gitmodules  LOG  README.md  dropout_rates.json  environment.yml  insert_template.sh  install.sh  main.nf  mf-afmassive.yml  mf-alphafold3.yml  mf-colabfold.yml  mf-nextflow.yml  mf_colabfold.yml  modified_run_alphafold.py  nextflow.config  nextflow.yml  patch_chain_iptm.sh  pyproject.toml  run_alphafold.py  run_massivefoldNF.sh  run_relax_from_results_pkl.py
MF_scripts/parallelization/: MF_parallel.sh  analyze.py  batch_calibration.py  batches.json  batching.py  create_jobfile.py  custom_params.json  generic_params.json  get_batch.py  group_templates.py  jeanzay_params.json  organize_outputs.py  parallelize.sh  params.json  run_MF_parallel.sh  run_examination.py  run_massivefold_parallel.sh  run_params.json  second_template.slurm  template_ugsf.slurm  template_ugsf_jobarray.slurm  test_multimer_alignment.slurm  test_multimer_jobarray.slurm  test_multimer_post_treatment.slurm
MF_scripts/plots/: MF_plots.py  massivefold_plots.py
alphafold/common/: confidence.py
alphafold/data/: pipeline.py  pipeline_multimer.py  templates.py
alphafold/model/: config.py  model.py  modules_multimer.py
docs/: MassiveFold_inner_working_details.md  installation.md  plots.md  troubleshooting.md  usage.md
examples/: H1140.fasta  H1144.fasta
examples/converted_for_colabfold/: H1140.fasta
massivefold/: extract_scores.py  gather_runs.py  lighten_pkl.py  massivefold_plots.py  run_massivefold.sh  run_massivefold_screening.sh
massivefold/parallelization/: AFmassive_params.json  AlphaFold3_params.json  ColabFold_params.json  alphafold3_params.json  batching.py  params.json  (+11 more)
plots/: MF_plots.py
processes/: afmassive.nf  colabfold.nf
(+95 files in other folders)
