[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "massivefold"
version = "1.8.2"
description = "MassiveFold CLI"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
massivefold = "massivefold.cli:main"
massivefold_plots = "massivefold.massivefold_plots:cli"
gather = "massivefold.gather_runs:main"
get_batch = "massivefold.parallelization.get_batch:main"
unifier = "massivefold.parallelization.unifier:main"
organize_outputs = "massivefold.parallelization.organize_outputs:main"
lighten_output = "massivefold.parallelization.lighten_output:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
massivefold = [
  "parallelization/**/*.py",
  "parallelization/**/*.json",
  "parallelization/headers/*.slurm",
  "parallelization/templates/**/*",
  "plots/**/*.py",
  "examples/*"
]
